<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_thanhtoan"
    style="@style/SCREEN">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#a4161a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:layout_marginBottom="5dp"
            android:text="Delivery Information"
            android:textColor="@color/white"
            android:padding="5dp"
            android:backgroundTint="@color/red"
            android:background="@drawable/searchbar_background"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:maxLines="1"
            android:background="@drawable/searchbar_background"
            android:drawableLeft="@drawable/user_black"
            android:drawablePadding="13dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Nhập tên của bạn"
            android:paddingHorizontal="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:maxLines="1"
            android:background="@drawable/searchbar_background"
            android:drawableLeft="@drawable/baseline_contact_phone_24"
            android:drawablePadding="13dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Nhập số điện thoại"
            android:paddingHorizontal="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:layout_marginVertical="5dp"
            android:background="@drawable/searchbar_background"
            android:drawableLeft="@drawable/baseline_add_location_24"
            android:drawablePadding="13dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Nhập địa chỉ giao hàng"
            android:paddingHorizontal="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnXacnhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_button"
            android:text="Confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/info"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/deli" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>