...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
...
