...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".ui.fragments.CartFragment"
    style="@style/SCREEN">

    <Button
        android:id="@+id/button_newOrder"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/gradient_button"
        android:onClick="newOrder"
        android:text="Đặt hàng"
        android:textAlignment="center"
...
